chore: use handlebars templating

--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Bookworm’s Den Store</title>
+    <title>{{ title }}</title>
     <link rel="icon" href="https://www.google.com/favicon.ico" />
     <!-- Include Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
-<body class="bg-gray-100 p-2">
+<body class="bg-gray-200 p-2">
     <div class="container mx-auto py-8">
-        <h1 class="text-4xl font-bold">The Bookworm’s Den Store</h1>
+        <h1 class="text-4xl font-bold">{{ title }}</h1>
 
         <!-- Search Bar Section -->
         <div class="mb-8">
